# math-compiler

./: .gitignore  CMakeLists.txt  math-compiler.sln
math-compiler/: approximating_functions_using_floating_point.txt  assembler.txt  assemblyCode.cpp  assemblyCode.hpp  assemblyInstruction.hpp  ast.cpp  ast.hpp  astAllocator.cpp  astAllocator.hpp  bashPath.hpp  callingConventions.txt  codeGenerator.cpp  codeGenerator.hpp  deadCodeElimination.cpp  deadCodeElimination.hpp  disassemble.sh  evaluateAst.cpp  evaluateAst.hpp  executeFunction.cpp  executeFunction.hpp  ffiUtils.cpp  ffiUtils.hpp  floatingPoint.cpp  (+47 more)
src/: CMakeLists.txt  approximating_functions_using_floating_point.txt  assemblyCode.cpp  assemblyCode.hpp  assemblyInstruction.hpp  ast.hpp  astAllocator.cpp  codeGenerator.cpp  deadCodeElimination.cpp  deadCodeElimination.hpp  debug.cpp  debug.hpp  errorMessage.cpp  errorMessage.hpp  evaluateAst.cpp  executeFunction.hpp  floatingPoint.hpp  glslCodeGenerator.cpp  glslCodeGenerator.hpp  input.hpp  ir.cpp  ir.hpp  irCompiler.cpp  irCompiler.hpp  irCompilerMessageReporter.hpp  irVm.cpp  irVm.hpp  listIrCompilerMessageReporter.cpp  listIrCompilerMessageReporter.hpp  listParserMessageReporter.cpp  listParserMessageReporter.hpp  listScannerMessageReporter.cpp  listScannerMessageReporter.hpp  machineCode.cpp  machineCode.hpp  main.cpp  ostreamIrCompilerMessageReporter.cpp  ostreamParserMessageReporter.cpp  ostreamScannerMessageReporter.cpp  parser.cpp  (+13 more)
src/os/: os.hpp
src/utils/: printingUtils.cpp  pritningUtils.hpp  setDifference.hpp  stringStream.cpp  stringStream.hpp
(+49 files in other folders)
